# craft_hw_ocr

./: pyproject.toml
craft_hw_ocr/: OCR.py
